style: Fix incorrect spacing of health insurance options' public price explanation

--- a/frontend/templates/css/style.scss
+++ b/frontend/templates/css/style.scss
@@ -2278,13 +2278,8 @@ collapsible, letter-generator, feedback-residence-permit, health-insurance-calcu
         }
     }
 
-    .health-insurance-options{
-        .price{
-            margin-top:var(--xl);
-        }
-        h3{
-            margin: 0;
-        }
+    .health-insurance-options h3{
+        margin: 0;
     }
 
     .two-columns{
